@@ -93,7 +93,7 @@ Quiet mode on.  This mode turns off all warnings/notes/messages. (optional)
 Verbose mode on.  This mode gives as much feedback to the user as possible. (optional)
 .TP 8
 .B -g guile_procedure
-Specify the guile procedure which is executed to create the netlist.  
+Specify the guile procedure which is executed to create the netlist. Use "-g help" to display a list of available backends.
 .TP 8
 .B -o output_filename
 Specify the filename which will contain the netlist generated by gnetlist.  If this option is not specified the default filename is "output.net".
