@@ -1,3 +1,4 @@
 Makefile
 Makefile.in
 devfiles
+new_*
