@@ -1,3 +1,12 @@
+2007-02-10 Ales Hvezda   <ahvezda@geda.seul.org>
+
+	* docs/gnetlist.1, src/gnetlist.c, src/parsecmd.c: Applied patch by
+	Tomaz Solc [ 1593644 ] gnetlist: use "-g help" to list available
+	backends. Thanks!
+
+	* tests/.cvsignore: Added rule to ignore all the newly generated 
+	files.
+
 2007-02-10 Carlos Nieves Onega <cnieves@iespana.es>
 
 	* configure.ac, tests/Makefile.am, tests/drc2/Makefile.am,
